	  confirmed by Pamela Huntley.
	* dmidecode.c: Display CPUID values as decimal, not hexa. This is
	  a reversal of the 2003-07-18 change to be consistent with
	  /proc/cpuinfo under Linux.
	* dmidecode.c: Fix processor ID decoding for older 80486. Not very
	  important since such systems are unlikely to support SMBIOS.
	* dmidecode.c: Modify CPU signature display for AMD processors.

2003-10-24  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Add another exception to the CPUID-supporting CPU list.

2003-10-19  Jean Delvare  <khali@linux-fr.org>

	* README: Clarify why mmap is used. Fix typo.
	* Makefile: Add deleting core to the clean target.
	* version.h: Set version to 2.3.

2003-10-17  Jean Delvare  <khali@linux-fr.org>

	* biosdecode.c: Use (void) instead of __attribute__ ((usused)) to
	  declare that a function parameter isn't used. According to Alexandre
	  Duret-Lutz, this is the portable way do to it. Fix typo in comment.
	* dmidecode.c: Fix typo.

2003-10-16  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Remove useless comparison in dmi_system_boot_status.
	  Thanks to Alexandre Duret-Lutz for pointing this out.
	* biosdecode.c: Add a missing length check in acpi_decode. Found
	  using Valgrind.
	* biosdecode.c: Fix buffer overrun in main. Found using Valgrind.

2003-10-14  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Update DMTF reference addresses.
	* dmidecode.c: List two more processors (Athlon64 and Pentium M)
	  as x86-class (i.e. supporting CPUID).

2003-10-11  Jean Delvare  <khali@linux-fr.org>

	Update to support DMTF Master MIF version 030621 (was 021205).

	* dmidecode.c: Handle unknown processor voltage.
	* dmidecode.c: Fix typo in event log method.
	* dmidecode.c: One additional processor type (Pentium M).
	* dmidecode.c: Add the AMD Opteron to the list of x86-class
	  processors. Thanks to Mike Cooper for providing information.
	* vpddecode.c: New program for decoding a machine's VPD structure